kubernetes/apps/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
spec:
  selector:
    app.kubernetes.io/name: home-assistant
  ports:
    - name: http
      port: 80
      targetPort: 8123
      protocol: TCP
